Adding Comments, Not Working Fully but good enough

--- a/app/src/main/res/layout/bottom_navigation_activist.xml
+++ b/app/src/main/res/layout/bottom_navigation_activist.xml
@@ -11,7 +11,7 @@
     <LinearLayout
         android:id="@+id/navigation_bar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="55dp"
         android:orientation="horizontal"
         android:background="@drawable/customborder"
         android:layout_alignParentBottom="true">
@@ -26,7 +26,7 @@
             android:scaleType="centerInside"
             app:tint="@color/lightGrayWatanNavIcons"
 
-            android:padding="10dp"
+            android:padding="7dp"
             />
 
 <!--
@@ -44,7 +44,7 @@
             android:scaleType="centerInside"
             app:tint="@color/lightGrayWatanNavIcons"
 
-            android:padding="10dp"
+            android:padding="0dp"
             />
 
         <ImageButton
@@ -56,7 +56,7 @@
             app:tint="@color/lightGrayWatanNavIcons"
             android:src="@drawable/icon_bell"
             android:scaleType="centerInside"
-            android:padding="10dp"
+            android:padding="7dp"
             />
 
 
@@ -82,8 +82,7 @@
             android:src="@drawable/user"
             android:scaleType="centerInside"
             app:tint="@color/lightGrayWatanNavIcons"
-
-            android:padding="10dp"
+            android:padding="6dp"
             android:background="@null"
             />
 
