--- a/app/src/main/res/layout/activity_show_post.xml
+++ b/app/src/main/res/layout/activity_show_post.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:scrollbars="none"
     android:layout_height="match_parent"
     tools:context=".ShowPostActivity">
 
@@ -20,7 +21,7 @@
         android:layout_marginTop="15dp"
         android:scaleType="centerCrop"
         app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize20PercentShowPost"
-        android:layout_height="250dp"
+        android:layout_height="330dp"
         android:src="@drawable/image_post_example"
         android:background="@drawable/rounded_rectangle"/>
 
@@ -260,7 +261,102 @@
 
                 </LinearLayout>
             </RelativeLayout>
+
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="10dp"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/likesCount"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingTop="5dp"
+                android:text="1.2k likes"
+                android:paddingBottom="5dp"
+                android:layout_weight="12"
+                android:textColor="@android:color/black"
+                android:textSize="14sp" />
+
+            <TextView
+                android:id="@+id/commentsCount"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:clickable="true"
+                android:paddingTop="5dp"
+                android:text="1.5K Comments"
+                android:layout_alignParentEnd="true"
+                android:textAlignment="textEnd"
+                android:layout_weight="1"
+                android:paddingBottom="5dp"
+                android:textColor="@android:color/black"
+                android:textStyle="bold"
+                android:textSize="13sp" />
+
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="20dp"
+            android:gravity="center_vertical"
+            android:layout_marginHorizontal="5dp"
+            android:orientation="horizontal">
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:gravity="center_vertical"
+                android:layout_height="match_parent">
+            <com.google.android.material.imageview.ShapeableImageView
+                android:id="@+id/showPostProfileImgComment"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:foregroundGravity="center_vertical"
+                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
+                android:layout_centerHorizontal="true"
+                android:src="@drawable/icon_account"
+                android:layout_alignParentLeft="true"
+                />
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/textField"
+                    android:layout_marginHorizontal="50dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:theme="@style/MyTextInputLayout_overlay"
+                    app:counterEnabled="true"
+                    android:gravity="center_vertical"
+                    app:counterMaxLength="100"
+                    app:hintAnimationEnabled="false"
+                    android:hint="Enter Comment ...">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/comment_edittext"
+                        />
+
+                </com.google.android.material.textfield.TextInputLayout>
+
+
+            <com.google.android.material.imageview.ShapeableImageView
+                android:id="@+id/commentIconSend"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:layout_gravity="center_vertical"
+                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
+                android:src="@drawable/icon_send"
+                android:layout_alignParentRight="true"
+                android:foregroundGravity="center"
+                />
+
+            </RelativeLayout>
+
+
+        </LinearLayout>
+
+
     </LinearLayout>
-</RelativeLayout>
+</ScrollView>
