--- a/app/src/main/res/layout/activity_thank_you.xml
+++ b/app/src/main/res/layout/activity_thank_you.xml
@@ -26,6 +26,7 @@
             android:id="@+id/welcomeTV"
             android:layout_width="wrap_content"
             android:layout_height="167dp"
+            android:layout_marginHorizontal="30dp"
             android:layout_marginBottom="10dp"
             android:text="Thank you for applying we will get back to you soon!"
             android:textColor="@android:color/black"
@@ -48,7 +49,7 @@
                 android:text="All ready have an account? "
                 android:paddingBottom="20dp"
                 android:textColor="@android:color/black"
-                android:textSize="20sp" />
+                android:textSize="14sp" />
 
             <TextView
                 android:id="@+id/createnewaccount"
@@ -61,7 +62,7 @@
                 android:paddingBottom="20dp"
                 android:textColor="@android:color/black"
                 android:textStyle="bold"
-                android:textSize="20sp" />
+                android:textSize="13sp" />
 
         </LinearLayout>
 
